# Project-FOG

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
.claude/: settings.local.json
.streamlit/: config.toml
src/trap/: __init__.py  main.py  models.py  parse.py  storage.py
src/trap/ui/: __init__.py  components.py  router.py  styles.py
tests/: test_parser.py  test_smoke.py  test_storage.py
tests/fixtures/: sample_invoice_1.txt  sample_invoice_2.txt
