[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trap"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
trap-run = "trap.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
